# devops2

./: Dockerfile  FuncA.cpp  FuncA.h  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure~  devops2.1.sln  main.cpp  myprogram  program  scriptA.sh  scriptB.sh  server.cpp  test_FuncA  test_FuncA.cpp
.deps/: FuncA.Po  main.Po  program-FuncA.Po  program-main.Po  server.Po  test_FuncA.Po
.github/workflows/: docker.yml  main.yml
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
debian/: changelog  control  rules
devops2.1/: FuncA.cpp  FuncA.h  devops2.1.vcxproj  main.cpp
devops2.1/.github/workflows/: main.yml
devops2.1/.github/workflows/.github/workflows/: main.yml
